# lab_6

./: CMakeLists.txt  Date.cpp  Date.h  DateParser.h  FileReader.h  RationalNumber.cpp  RationalNumber.h  Rectangle.cpp  Rectangle.h  dates.txt  main.cpp
tests/: tests.cpp
